<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="30dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center|left"
            android:text="@string/Every_Hour"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_refresh"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:background="@drawable/ic_refresh" />

    </RelativeLayout>

    <lecho.lib.hellocharts.view.LineChartView
        android:id="@+id/line_chart_hour"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:padding="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="5dp"
        android:background="@color/transparent_half"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_wind_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Wind_Power"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/weather_wind_img"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/weather_wind_title"
                android:layout_marginLeft="5dp"
                android:src="@drawable/img_wind" />

            <TextView
                android:id="@+id/weather_wind_power_tv"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_wind_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_wind_dire_tv"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_below="@id/weather_wind_title"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_sun_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Sun_Rise_Set"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/weather_sun_img"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/img_sun_rise_set" />

            <TextView
                android:id="@+id/weather_sun_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_below="@id/weather_sun_title"
                android:layout_toRightOf="@+id/weather_sun_img"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="1dp"
        android:background="@color/transparent_half"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_sd_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Sd"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/weather_sd_img"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_sd_title"
                android:layout_toLeftOf="@+id/weather_sd_power_tv"
                android:src="@drawable/img_sd" />

            <TextView
                android:id="@+id/weather_sd_power_tv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_sd_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_uv_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Uv"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_uv_power_tv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/weather_uv_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_uv_sug_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_uv_power_tv"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="1dp"
        android:background="@color/transparent_half"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_clothes_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Closes"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_clothes_power_tv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/weather_clothes_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_clothes_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_clothes_power_tv"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_car_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Wash_Car"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_car_power_tv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/weather_car_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_car_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_car_power_tv"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="1dp"
        android:background="@color/transparent_half"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_pollutant_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Pollutant"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_pollutant_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_pollutant_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.01"
            android:background="@color/white" />

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:id="@+id/weather_comfort_title"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_alignParentTop="true"
                android:gravity="center"
                android:paddingTop="5dp"
                android:text="@string/Comfort"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_comfort_power_tv"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_below="@id/weather_comfort_title"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/weather_comfort_tv"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/weather_comfort_power_tv"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text=""
                android:textColor="@color/white"
                android:textSize="14sp" />

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>